working on connection of pages

--- a/Pratice-Question-Projects/index.html
+++ b/Pratice-Question-Projects/index.html
@@ -9,6 +9,7 @@
     <!-- <link rel="stylesheet" href="style.css"> -->
     <link rel="stylesheet" href="style.css">
 
+    <script src="app.js"></script>
     <!-- javascript  online libinaries-->
     <script src="https://code.jquery.com/jquery-3.4.1.slim.min.js" integrity="sha384-J6qa4849blE2+poT4WnyKhv5vZF5SrPo0iEjwBvKU7imGFAV0wwj1yYfoRSJoZ+n" crossorigin="anonymous"></script>
     <script src="https://cdn.jsdelivr.net/npm/popper.js@1.16.0/dist/umd/popper.min.js" integrity="sha384-Q6E9RHvbIyZFJoft+2mJbHaEWldlvI9IOYy5n3zV9zzTtmI3UksdQRVvoxMfooAo" crossorigin="anonymous"></script>
@@ -20,9 +21,10 @@
             <form>
                 <h2>Pratice Question Website</h2>
                 <br>
-                <button type="button" class="btn btn-primary btn-lg btn-block btn-dark">Enter Questions & Answer</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block btn-dark" onclick="take_test()">Enter Questions & Answer</button>
+                <script src="app.js"></script>
                 <button type="button" class="btn btn-primary btn-lg btn-block btn-dark">View Questions & Answer</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block btn-dark">Quiz Test</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block btn-dark" onclick="take-test.html">Quiz Test</button>
                 <button type="button" class="btn btn-primary btn-lg btn-block btn-dark">Remove Questions</button>
             </form>
         </div>
