connection between website

--- a/Pratice-Question-Projects/index.html
+++ b/Pratice-Question-Projects/index.html
@@ -21,10 +21,11 @@
             <form>
                 <h2>Pratice Question Website</h2>
                 <br>
-                <button type="button" class="btn btn-primary btn-lg btn-block btn-dark" onclick="take_test()">Enter Questions & Answer</button>
-                <script src="app.js"></script>
+                <button type="button" class="btn btn-primary btn-lg btn-block btn-dark" >Enter Questions & Answer</button>
+                
                 <button type="button" class="btn btn-primary btn-lg btn-block btn-dark">View Questions & Answer</button>
-                <button type="button" class="btn btn-primary btn-lg btn-block btn-dark" onclick="take-test.html">Quiz Test</button>
+                <button type="button" class="btn btn-primary btn-lg btn-block btn-dark" id ="quiz" onclick="take_test()">Quiz Test</button>
+                <script src="app.js"></script>
                 <button type="button" class="btn btn-primary btn-lg btn-block btn-dark">Remove Questions</button>
             </form>
         </div>
